# mkrueger-claude-plugin-jira

./: .mcp.json  README.md
.claude-plugin/: plugin.json
server/: pyproject.toml
server/src/jira_mcp/: server.py
skills/jira/: SKILL.md
