[project]
name = "jira-mcp"
version = "0.1.0"
description = "Read-only MCP server for Jira Cloud integration with Claude Code"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jira_mcp"]
